--- a/public/style.css
+++ b/public/style.css
@@ -38,3 +38,58 @@ h1{
     border-radius: 5px;
     cursor: pointer;
 }
+
+#news-container{
+    align-items: center;
+    margin: 5px 15px;
+    width: 80%;
+}
+
+.news-item {
+    border-bottom: 0.5px solid #ccc;
+}
+
+.news-item h3, p {
+    margin: 13px;
+}
+
+.filter-button {
+    background-color: #e49114;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 15px;  
+}
+.filter-button:hover {
+    background-color: #cf7c0a;
+}
+
+.sort-container {
+    display: flex;
+    gap: 10px;   
+    margin: 15px auto;
+    vertical-align: middle;
+}
+
+#sort-label {
+    margin-left: 15px;
+    font-weight: 600;
+    padding-top: 5px;
+}
+
+#sort-select {
+    padding: 3px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    display: none;
+}
+
+#current-state {
+    text-align: left;
+    margin-left: 15px;
+    font-weight: 500;
+    font-style: italic;
+    color: #cf7c0a;
+}
